--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
     "@clerk/themes": "^2.2.21",
+    "framer-motion": "^12.10.5",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
